mastermind/style.css
body{
    background-color:cornflowerblue
}

.container{
    display:grid;
    grid-template-rows: 1fr 1fr 1fr;
    grid-template-columns: 1fr 1fr 1fr;
    width:100%;
    height:100%;
}
#hints{
    text-align: right;
    padding-right: 20px;
}
#answers{
    text-align:left;
    padding-left: 20px;
}

.board{
    border: 5px solid black;
    width: 500px;
    height: 800px;
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.colorpin,.hintpin{
    border-radius: 50%;
    width: 30px;
    height: 30px;
    display: inline-block;
    background-color:white;
    margin: 5px;
    margin-top:30px;
}

.colorpin:disabled{
    opacity: 0.7;
}

.hintpin{
    width: 20px;
    height: 20px;
    background-color:lightgray;
    border: 3px solid black;
}


.colorpin:active{
    opacity: 0.8;
}

/* Popup container - can be anything you want */
.popup {
    position: relative;
    display: inline-block;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
  }
  
  /* The actual popup */
  .popup .popuptext {
    visibility: hidden;
    width: 160px;
    background-color: #555;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 8px 0;
    position: absolute;
    z-index: 1;
    bottom: 125%;
    left: 50%;
    margin-left: -80px;
    box-shadow: 10px 5px 5px rgba(0,0,0,0.3);
  }
  
  /* Popup arrow */
  .popup .popuptext::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: #555 transparent transparent transparent;
  }
  
  /* Toggle this class - hide and show the popup */
  .popup .show {
    visibility: visible;
    -webkit-animation: fadeIn 0.2s;
    animation: fadeIn 0.2s;
  }
  
  /* Add animation (fade in the popup) */
  @-webkit-keyframes fadeIn {
    from {opacity: 0;} 
    to {opacity: 1;}
  }
  
  @keyframes fadeIn {
    from {opacity: 0;}
    to {opacity:1 ;}
  }

